--- a/Popcorn/Popcorn.vcxproj
+++ b/Popcorn/Popcorn.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Border.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Falling_Letter.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Main.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="Border.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Falling_Letter.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Platform.cpp" />
